--- a/src/styles/abstracts/_config.scss
+++ b/src/styles/abstracts/_config.scss
@@ -76,7 +76,7 @@ $light-theme: (
   "bg-base": #fbfafc,
   "bg-alternate": #1a1a1a,
   "bg-surface": #fff,
-  "border-base": #e5e7eb,
+  "border-base": #d3d5d9,
   "text-color": #1a1a1a,
   "text-muted": #1a1a1a8a,
   "text-subtle": #1a1a1a50,
