fixed container utility class generator variable

--- a/src/styles/abstracts/_config.scss
+++ b/src/styles/abstracts/_config.scss
@@ -7,6 +7,7 @@ $feature-flags: (
   "animations": true,
   "backdrops": true,
   "borders": true,
+  "container": true,
   "container-queries": true,
   "cursors": true,
   "displays": true,
