--- a/src/styles/layouts/_container.scss
+++ b/src/styles/layouts/_container.scss
@@ -28,7 +28,7 @@
   @include container-padding(1rem);
 }
 
-@if FN.feature-enabled("container-queries") {
+@if FN.feature-enabled("container") {
   // Container classes
   #{VAR.$parent-selector} .container {
     @include container;
