--- a/src/styles/utilities/_tooltips.scss
+++ b/src/styles/utilities/_tooltips.scss
@@ -46,7 +46,9 @@
             will-change: transform;
             opacity: 0;
             pointer-events: none;
-            transition: all var(--microtip-transition-duration) var(--microtip-transition-easing) var(--microtip-transition-delay);
+            transition:
+                opacity var(--microtip-transition-duration) var(--microtip-transition-easing) var(--microtip-transition-delay),
+                transform var(--microtip-transition-duration) var(--microtip-transition-easing) var(--microtip-transition-delay);
             position: absolute;
             box-sizing: border-box;
             z-index: 10;
@@ -84,13 +86,16 @@
     // Top position tooltips
     #{VAR.$parent-selector} [role~="tooltip"][data-microtip-position|="top"] {
         &::before {
-            background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A// www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%280%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
-            height: 6px;
-            width: 18px;
+            border-left: 9px solid transparent;
+            border-right: 9px solid transparent;
+            border-top: 6px solid var(--tooltip-bg);
+            height: 0;
+            width: 0;
             margin-bottom: 6px;
             transform: translate3d(-50%, 0, 0);
             bottom: 100%;
             left: 50%;
+            z-index: 999;
         }
 
         &::after {
@@ -134,15 +139,18 @@
     // Bottom position tooltips
     #{VAR.$parent-selector} [role~="tooltip"][data-microtip-position|="bottom"] {
         &::before {
-            background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A// www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%28180%2018%206%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
-            height: 6px;
-            width: 18px;
+            border-left: 9px solid transparent;
+            border-right: 9px solid transparent;
+            border-bottom: 6px solid var(--tooltip-bg);
+            height: 0;
+            width: 0;
             margin-top: 5px;
             margin-bottom: 0;
             transform: translate3d(-50%, -10px, 0);
             bottom: auto;
             left: 50%;
             top: 100%;
+            z-index: 999;
         }
 
         &::after {
@@ -195,11 +203,14 @@
         }
 
         &::before {
-            background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A// www.w3.org/2000/svg%22%20width%3D%2212px%22%20height%3D%2236px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%28-90%2018%2018%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
-            height: 18px;
-            width: 6px;
+            border-top: 9px solid transparent;
+            border-bottom: 9px solid transparent;
+            border-left: 6px solid var(--tooltip-bg);
+            height: 0;
+            width: 0;
             margin-right: 5px;
             margin-bottom: 0;
+            z-index: 999;
         }
 
         &::after {
@@ -223,11 +234,14 @@
         }
 
         &::before {
-            background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A// www.w3.org/2000/svg%22%20width%3D%2212px%22%20height%3D%2236px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%2890%206%206%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
-            height: 18px;
-            width: 6px;
+            border-top: 9px solid transparent;
+            border-bottom: 9px solid transparent;
+            border-right: 6px solid var(--tooltip-bg);
+            height: 0;
+            width: 0;
             margin-bottom: 0;
             margin-left: 5px;
+            z-index: 999;
         }
 
         &::after {
